...
import androidx.compose.ui.res.painterResource
import androidx.compose.ui.tooling.preview.Preview
import androidx.compose.ui.unit.dp
import com.epiclabs.thinktok.designsystem.theme.ThinkTokTheme
import com.epiclabs.thinktok.main.ui.R

private const val TEST_TAG_LANGUAGE_DROPDOWN_TEXT_FIELD = "LanguageDropdownTextField"
private const val TEST_TAG_LANGUAGE_DROPDOWN_MENU = "LanguageDropdownMenu"
private const val TEST_TAG_LANGUAGE_DROPDOWN_MENU_ITEM = "LanguageDropdownMenuItem-%s"

@OptIn(ExperimentalMaterial3Api::class)
@Composable
internal fun LanguageDropdown(
    languages: List<String>,
...
